tests/interpreter/call-expression-call-error.stderr
error: identifier 'x' is not defined
 --> $DIR/call-expression-call-error.lox:2:5
  |
2 |     x;
  |     ^
